# CyScout

./: 404.html  Classes.html  Contributing.html  Detectors.html  LICENSE.html  README.md  index.html  markdown-page.html  sitemap.xml
.github/workflows/: solidity-docs.yml
Classes/: Access.html  BasicBlock.html  Block.html  Call.html  ControlFlowGraph.html  Enclosing.html  Function.html  Specifier.html  SubBasicBlock.html  Variable.html
Detectors/: bad-prng.html  divide-before-multiply.html  incorrect-exp.html  incorrect-shift.html  is-unreachable.html  msg-value-in-for-loop.html  transfer-from.html  unchecked-send.html  unprotected-self-destruct.html
README/: LICENSE.html
markdown-page/: index.html
solidity/codeql/solidity/: .gitignore  BUILD.bazel
solidity/codeql/solidity/extractor/: BUILD.bazel  Cargo.toml  rust-toolchain.toml
solidity/codeql/solidity/extractor-pack/: codeql-extractor.yml  solidity.dbscheme
solidity/codeql/solidity/extractor/src/: autobuilder.rs  extractor.rs  generator.rs
solidity/codeql/solidity/ql/lib/: qlpack.yml  testquery.ql
solidity/codeql/solidity/ql/lib/ide-contextual-queries/: localDefinitions.ql  printAst.ql
solidity/codeql/solidity/solidity-test/: create-dbs.sh
solidity/codeql/solidity/solidity-test/bad-prng/: contract.sol
solidity/codeql/solidity/solidity-test/erc20-transfer-from-test/: remediated.sol
solidity/codeql/solidity/solidity-test/msg-in-for-loop/0.4.25/: contract.sol
solidity/codeql/solidity/solidity-test/shadowed-builtins/: contract.sol
solidity/codeql/solidity/tools/: BUILD.bazel
(+208 files in other folders)
