load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup")
load("//misc/bazel:pkg.bzl", "codeql_pack", "codeql_pkg_files")

package(default_visibility = ["//visibility:public"])

alias(
    name = "dbscheme",
    actual = "//solidity/ql/lib:dbscheme",
)

alias(
    name = "dbscheme-stats",
    actual = "//solidity/ql/lib:dbscheme-stats",
)

codeql_pkg_files(
    name = "dbscheme-group",
    srcs = [
        ":dbscheme",
        ":dbscheme-stats",
    ],
    strip_prefix = None,
)

pkg_filegroup(
    name = "db-files",
    srcs = [
        ":dbscheme-group",
        "//solidity/downgrades",
    ],
)

codeql_pkg_files(
    name = "codeql-extractor-yml",
    srcs = ["codeql-extractor.yml"],
    strip_prefix = None,
)

codeql_pkg_files(
    name = "extractor-arch",
    exes = [
        "//solidity/extractor",
    ],
    prefix = "tools/{CODEQL_PLATFORM}",
)

codeql_pack(
    name = "solidity",
    srcs = [
        ":codeql-extractor-yml",
        ":dbscheme-group",
        ":extractor-arch",
        "//solidity/downgrades",
        "//solidity/tools",
    ],
)
